# mistral_chat

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: mistral_chat_app.py
src/tools/: tool_definitions.py  yfinance.py
