[project]
name = "mistral-chat"
version = "0.1.0"
description = "POC web app to test chat UI with Streamlit and Mistral AI API for LLM and function calling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "mistralai>=1.7.0",
    "streamlit>=1.45.1",
    "yfinance>=0.2.61",
]
